--- a/ci/nginx-custom.conf
+++ b/ci/nginx-custom.conf
@@ -1,4 +1,11 @@
 server {
+  gzip on;
+  gzip_vary on;
+  gzip_min_length 1000;
+  gzip_proxied expired no-cache no-store private auth;
+  gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml application/javascript;
+  gzip_disable "MSIE [1-6]\.";
+
   listen 80;
   location / {
     root /usr/share/nginx/html;
